--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </button>
     </div>
     <div class="info">
-      <p id="speaker">Name</p>
-      <p id="title">Title</p>
+      <h2 class="text title">Title</h2>
+      <p class="text artist">Name</p>
       <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
     </div>
 
