get stream from api

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <div class="container">
     <div class="pict">
       <button id="playstop">
+      <!-- <a href="#" title="Play video" class="play-stop play"></a> -->
+
         <img src="asset/play-48.png" class="play-stop play">
         <audio src="https://radio.almuwasholah.com/radio/8000/stream.mp3" id="stream"> </audio>
       </button>
