--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </button>
     </div>
     <div class="info">
-      <h2 class="text title">Title</h2>
-      <p class="text artist">Name</p>
+      <h2 class="text title">~</h2>
+      <p class="text artist"></p>
       <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
     </div>
 
