--- a/tes.html
+++ b/tes.html
@@ -13,7 +13,70 @@
     font-family: "Open Sans", sans-serif;
     text-align: center;
   }
+  
+  
+ .play {
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 30px solid #ffffff;
+    border-bottom: 20px solid transparent; 
+    margin: 27px auto 20px 27px;
+    position: relative;
+    z-index: 1;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    left: 10px;
+  }
 
+  .play:before {
+    content: "";
+    position: absolute;
+    top: -30px;
+    left: -50px;
+    bottom: -30px;
+    right: -10px;
+    border-radius: 50%;
+    border: 5px solid #ffffff;
+    z-index: 2;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+  }
+
+  .play:after {
+    content: "";
+    opacity: 0;
+    transition: opacity 0.6s;
+    -webkit-transition: opacity 0.6s;
+    -moz-transition: opacity 0.6s;
+  }
+
+  .play:hover:before,
+  .play:focus:before {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+  }
+
+  .play.active {
+    border-color: transparent;
+  }
+
+  .play.active:after {
+    content: "";
+    opacity: 1;
+    width: 120px;
+    height: 25px;
+    background: #ffffff;
+    position: absolute;
+    right: 4px;
+    top: -12px;
+    border-left: 20px solid #ffffff;
+  } 
   
 </style>
 
