fix refresh text next audio

--- a/index.html
+++ b/index.html
@@ -24,24 +24,17 @@
     <br>
 
     <div class="act">
-      <!-- <button id="playstop"> -->
-      <!-- <img src="asset/play-48.png" class="play-stop play"> -->
       <audio src="https://radio.almuwasholah.com/radio/8000/stream.mp3" id="stream"> </audio>
-      <!-- </button> -->
-      <a href="#" title="Play video" class="play-stop play goPlay"></a>
+      <a href="#" class="play-stop play goPlay"></a>
     </div>
 
     <div class="info">
-
       <p class="text title">~</p>
       <p class="text artist"></p>
       <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
     </div>
 
-
-
   </div>
-
 
 </body>
 
