--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Mada&family=Rajdhani&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mada&family=Rajdhani:wght@400;600&display=swap" rel="stylesheet">
   <script src="script.js"></script>
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 </head>
 
 <body>
