--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 
 <head>
   <title>
-    Radio
+    Radio Al Muwasholah
   </title>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="icon" href="asset/almw.png" sizes="192x192" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mada&family=Rajdhani:wght@400;600&display=swap" rel="stylesheet">
   <script src="script.js"></script>
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
 </head>
 
-<body>
+<body class="bg">
+
+  <div class="fi"></div>
+  <div class="fi"></div>
+
   <div class="container">
 
     <div class="pict">
